# osquery-rs

./: Cargo.toml  README.md
examples/: table.rs
src/: error.rs  lib.rs
src/manager/: async_server.rs  client.rs  mod.rs  server.rs
src/manager/channel/: mod.rs  namedpipe.rs
src/manager/comms/: mod.rs  namedpipe.rs  socket.rs
src/plugin/: mod.rs
src/plugin/table/: mod.rs
