[package]
name = "osquery-rs"
version = "0.1.0"
authors = ["Lucas Berezy <lucas@berezy.me"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# failure = "0.1.6"
thrift = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.18.0"
strum_macros = "0.18.0"